fixed header css alignment

--- a/src/App.css
+++ b/src/App.css
@@ -10,8 +10,7 @@ body {
   header {
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    gap: 5vw;
+    justify-content: space-around;
 
     .region{
       font-size: 2vw;
@@ -99,6 +98,9 @@ body {
     height: 10vh;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 
+    .region{
+      margin-left: 2vw;
+    }
     input {
       font-size: 1vw;
     }
